feat: portfolio 페이지 3 완료

--- a/main.css
+++ b/main.css
@@ -9,6 +9,14 @@ html {
     format("woff");
 }
 
+@font-face {
+  font-family: "WandohopeR";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/WandohopeR.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   font: 14px "WandohopeB", Helvetica, Arial, sans-serif;
 }
@@ -23,358 +31,27 @@ h1 {
   list-style: none;
 }
 
+a,
+p,
+div {
+  word-break: keep-all;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  display: inline;
+  padding: 0;
+  margin: 0;
 }
 
 label[for] {
   cursor: pointer;
   user-select: none;
 }
-
-/* 라이브러리 */
-.block {
-  display: block;
-}
-
-.inline-block {
-  display: inline-block;
-}
-
-.absolute-left {
-  position: absolute;
-  left: 0;
-}
-
-.absolute-right {
-  position: absolute;
-  right: 0;
-}
-
-.absolute-bottom {
-  position: absolute;
-  bottom: 0;
-}
-
-.absolute-top {
-  position: absolute;
-  top: 0;
-}
-
-.absolute-center {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.absolute-middle {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.absolute-middle.absolute-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
-
-.relative {
-  position: relative;
-}
-
-.cell {
-  float: left;
-  box-sizing: border-box;
-}
-
-.cell-right {
-  float: right;
-  box-sizing: border-box;
-}
-
-.row::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.clear-both {
-  clear: both;
-}
-
-.img-box > img {
-  width: 100%;
-  display: block;
-}
-
-.con {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.margin-0-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.text-align-right {
-  text-align: right;
-}
-
-.line-height-0 {
-  line-height: 0;
-}
-
-.line-height-0 > * {
-  line-height: normal;
-}
-
-.width-30px {
-  width: 30px;
-}
-
-.width-35px {
-  width: 35px;
-}
-
-.width-40px {
-  width: 35px;
-}
-
-.width-45px {
-  width: 35px;
-}
-
-.width-50px {
-  width: 50px;
-}
-
-.width-80px {
-  width: 80px;
-}
-
-.width-100px {
-  width: 100px;
-}
-
-.width-100p {
-  width: 100%;
-}
-
-.width-60p {
-  width: 60%;
-}
-
-.width-55p {
-  width: 55%;
-}
-
-.width-50p {
-  width: 50%;
-}
-
-.width-45p {
-  width: 45%;
-}
-
-.width-40p {
-  width: 40%;
-}
-
-.width-30p {
-  width: 30%;
-}
-
-.width-35p {
-  width: 35%;
-}
-
-.width-100p-except-30px {
-  width: calc(100% - 30px);
-}
-
-.width-100p-except-35px {
-  width: calc(100% - 35px);
-}
-
-.width-100p-except-40px {
-  width: calc(100% - 40px);
-}
-
-.width-100p-except-50px {
-  width: calc(100% - 50px);
-}
-
-.width-100p-except-80px {
-  width: calc(100% - 80px);
-}
-
-.width-100p-except-100px {
-  width: calc(100% - 100px);
-}
-
-.height-100p {
-  height: 100%;
-}
-
-.height-50p {
-  height: 50%;
-}
-
-.border-box {
-  box-sizing: border-box;
-}
-
-.font-size-dot-8rem {
-  font-size: 0.8rem;
-}
-
-.table-row {
-  display: table;
-}
-
-.table-row.row::after {
-  display: inline;
-  clear: non;
-}
-
-.table-row > .cell {
-  float: none;
-  display: table-cell;
-}
-
-.border-red {
-  border: 10px solid red;
-}
-
-.border-green {
-  border: 10px solid green;
-}
-
-.border-blue {
-  border: 10px solid blue;
-}
-
-.border-gold {
-  border: 10px solid gold;
-}
-
-.border-pink {
-  border: 10px solid pink;
-}
-
-/* 라이브러리 - flex */
-* > .flex {
-  display: flex;
-}
-
-* > .flex-grow-1 {
-  flex-grow: 1;
-}
-
-* > .flex-jc-c {
-  justify-content: center;
-}
-
-* > .flex-jc-s {
-  justify-content: flex-start;
-}
-
-* > .flex-jc-e {
-  justify-content: flex-end;
-}
-
-* > .flex-jc-sb {
-  justify-content: space-between;
-}
-
-* > .flex-ai-c {
-  align-items: center;
-}
-
-* > .flex-ai-s {
-  align-items: flex-start;
-}
-
-* > .flex-ai-e {
-  align-items: flex-end;
-}
-
-* > .flex-as-s {
-  align-self: stretch;
-}
-
-* > .flex-as-c {
-  align-self: center;
-}
-
-* > .flex-as-s {
-  align-self: flex-start;
-}
-
-* > .flex-as-e {
-  align-self: flex-end;
-}
-
-* > .flex-column-nowrap {
-  flex-flow: column nowrap;
-}
-
-* > .flex-column-wrap {
-  flex-flow: column wrap;
-}
-
-* > .flex-row-wrap {
-  flex-flow: row wrap;
-}
-
-.flex-ch-basis-0 > * {
-  flex-basis: 0;
-}
-
-* > .flex-1-0-0 {
-  flex: 1 0 0;
-}
-
-/* 커스텀 */
-
-/* 고정형 .con 시작 */
-.con-min-width {
-  min-width: 1370px;
-}
-
-.con {
-  width: 1370px;
-}
-/* 고정형 .con 끝 */
-
-/* 반응형 타입 1 .con 시작 */
-/*
-  .con {
-	max-width:1370px;
-  }
-  */
-/* 반응형 타입 1 .con 끝 */
-
-/* 반응형 타입 2(넓을때만 반응형) .con 시작 */
-/*
-  .con-min-width {
-	min-width:1370px;
-  }
-  
-  .con {
-	margin-left:50px;
-	margin-right:50px;
-  }
-  */
-/* 반응형 타입 2(넓을때만 반응형) .con 끝 */
 
 .page-1 {
   background-color: rgb(62, 82, 138);
@@ -410,7 +87,7 @@ label[for] {
 #title-link {
   z-index: 1;
   color: rgba(255, 255, 255, 0.623);
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .link-item {
@@ -425,11 +102,152 @@ label[for] {
 
 .inner-pull {
   padding: 10rem 5rem;
-  font-size: 5rem;
+  padding-bottom: 0;
   color: white;
 }
 
 a:visited {
   color: white;
   text-decoration: none;
+}
+
+.circle {
+  background-image: url("./images/circle.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 0.7rem;
+  height: 0.7rem;
+  margin: 0.2rem;
+}
+
+.circle.fill {
+  background-image: url("./images/circle-fill.png");
+}
+
+/*background image*/
+.back {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.back-1 {
+  background-image: url("./images/back1.jpg");
+}
+
+.back-2 {
+  background-image: url("./images/42.jpg");
+}
+
+.back-3 {
+  background-image: url("./images/port0.png");
+}
+
+/*text size*/
+.gray {
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.text-b1 {
+  font-family: "WandohopeB";
+  font-size: 4rem;
+}
+.text-b2 {
+  font-family: "WandohopeB";
+  font-size: 2rem;
+}
+
+.text-b2-5 {
+  font-family: "WandohopeB";
+  font-size: 1.5rem;
+}
+
+.text-b3 {
+  font-family: "WandohopeB";
+  font-size: 1.2rem;
+}
+.text-r1 {
+  font-family: "WandohopeR";
+  font-size: 1.5rem;
+}
+
+.text-r2 {
+  font-family: "WandohopeR";
+  font-size: 1.2rem;
+}
+
+.text-r2.long {
+  line-height: 2.5rem;
+}
+
+.text-r3 {
+  font-family: "WandohopeR";
+  font-size: 1rem;
+  line-height: 2.3rem;
+}
+
+.short {
+  line-height: 1.3rem;
+}
+
+.small-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background: rgba(0, 0, 0, 0.45);
+  width: 90%;
+  margin-top: 5vh;
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+.small-box.white {
+  background: rgba(255, 255, 255, 0.25);
+}
+.small-box.mult {
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  align-items: center;
+  grid-gap: 3rem;
+}
+
+.small-text-box {
+  margin-top: 1rem;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.logo {
+  width: 5rem;
+  height: 5rem;
+  background-color: white;
+  border-radius: 5rem;
+}
+.img-logo {
+  height: 6rem;
+}
+
+.img-logo.padding {
+  height: 4rem;
+}
+
+.img-logo.big-padding {
+  height: 3rem;
+}
+
+.img-logo.round {
+  border-radius: 0.5rem;
+}
+
+/* icon*/
+.icon {
+  object-fit: cover;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0 0.5rem;
+}
+
+.fit-bottom-box {
+  display: flex;
+  align-items: flex-end;
 }
