--- a/portfolio.css
+++ b/portfolio.css
@@ -4,18 +4,22 @@
     format("woff");
 }
 
+html,
 body {
   font: 14px "WandohopeB", Helvetica, Arial, sans-serif;
+  color: white;
+  height: max(100vh, 100%);
 }
 
 .body {
-  height: 100vh;
+  padding-top: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   font-size: 22px;
-  background-color: rgb(62, 82, 138);
+  height: max(100vh, 100%);
+  background-image: url("./images/port0.png");
 }
 
 :root {
@@ -47,17 +51,9 @@ span {
   transition: 0.75s;
 }
 .num.selected {
-  background-color: var(--main-color);
   color: #fff;
-}
-span:hover {
-  color: #fff;
-  background-color: var(--main-color);
 }
 
-.selected {
-  transform: scale(0.8);
-}
 ::selection {
   background-color: transparent;
 }
@@ -97,20 +93,6 @@ span:hover {
 
 #head {
   z-index: 1;
-  width: calc(100% - 6rem);
-  display: flex;
-  position: fixed;
-  top: 0;
-
-  align-items: flex-end;
-  justify-content: space-between;
-  padding: 3rem;
-}
-
-/*head*/
-
-#head {
-  z-index: 1;
   width: 100%;
   display: flex;
   position: fixed;
@@ -121,28 +103,51 @@ span:hover {
   padding: 3rem;
 }
 
-#title {
-  color: white;
-  font-size: 3rem;
+.circle {
+  width: 1.4rem;
+  height: 1.4rem;
+  margin: 0.4rem;
 }
 
-#title-link {
-  z-index: 1;
-  color: rgba(255, 255, 255, 0.623);
-  font-size: 1.5rem;
-}
-.link-item.selected {
-  color: white;
+.element-box {
+  padding: 1rem 2rem;
+  width: 100%;
+  height: 100%;
 }
 
-.link-item {
-  padding: 0 0.5rem;
-  height: 3rem;
-  color: rgba(255, 255, 255, 0.623);
-  text-decoration: none;
+.text-box {
+  position: relative;
 }
-a,
-a:visited {
-  color: white;
-  text-decoration: none;
+.text-box.right {
+  text-align: right;
+}
+
+.text-box.bottom {
+  top: 35%;
+}
+
+/* background*/
+
+.port-back-1 {
+  background-image: url("./images/port1.png");
+}
+
+.port-back-2 {
+  background-image: url("./images/port2.png");
+}
+
+.port-back-3 {
+  background-image: url("./images/port3.png");
+}
+
+.line {
+  height: 0;
+  width: 100%;
+  margin-top: 1rem;
+  border-bottom: solid 2px rgba(255, 255, 255, 0.45);
+  border-radius: 1px;
+}
+
+.full {
+  height: max(100vh, 100%);
 }
