--- a/portfolio.css
+++ b/portfolio.css
@@ -8,7 +8,7 @@ html,
 body {
   font: 14px "WandohopeB", Helvetica, Arial, sans-serif;
   color: white;
-  height: max(100vh, 100%);
+  min-height: 100vh;
 }
 
 .body {
@@ -18,8 +18,8 @@ body {
   align-items: center;
   flex-direction: column;
   font-size: 22px;
-  height: max(100vh, 100%);
   background-image: url("./images/port0.png");
+  min-height: 100vh;
 }
 
 :root {
@@ -118,7 +118,7 @@ span {
 .text-box {
   position: relative;
 }
-.text-box.right {
+.right {
   text-align: right;
 }
 
@@ -149,5 +149,5 @@ span {
 }
 
 .full {
-  height: max(100vh, 100%);
+  min-height: 100vh;
 }
